--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '7.3', '7.4', '8' ]
+        php: [ '7.4', '8' ]
         laravel: [ '7', '8' ]
 
     steps:
