--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,10 @@
     }
   ],
   "require": {
-    "php": "^7.3 || ^8.0"
+    "php": "^7.4 || ^8.0"
   },
   "require-dev": {
-    "illuminate/support": "^8.14",
+    "illuminate/support": "^7.0 || ^8.0",
     "phpunit/phpunit": "^9.4"
   },
   "scripts": {
