--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 language: php
+os:
+  - linux
+  - osx
+  - windows
+dist: focal
 php:
   - '7.4'
   - '8.0'
-
+jobs:
+  allow_failures:
+    - os: windows
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --no-interaction
-
 script:
   - composer test-ci
-
 after_success:
   - bash <(curl -s https://codecov.io/bash)
