--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0"
+    "php": "^7.4 || ^8.0",
+    "ext-simplexml": "*"
   },
   "require-dev": {
     "illuminate/support": "^7.0 || ^8.0",
