--- a/composer.json
+++ b/composer.json
@@ -40,12 +40,12 @@
     }
   ],
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^7.4 | ^8.0 | ^8.1",
     "ext-simplexml": "*"
   },
   "require-dev": {
-    "illuminate/support": "^7.0 || ^8.0",
-    "phpunit/phpunit": "^9.4"
+    "illuminate/support": "^7.0 | ^8.0",
+    "phpunit/phpunit": "^9.5.14"
   },
   "scripts": {
     "test-ci": "phpunit --coverage-clover=coverage.xml"
