--- a/composer.json
+++ b/composer.json
@@ -40,11 +40,12 @@
     }
   ],
   "require": {
-    "php": "^7.4 | ^8.0 | ^8.1",
-    "ext-simplexml": "*"
+    "php": "^7.4 | ^8",
+    "ext-simplexml": "*",
+    "ext-curl": "*"
   },
   "require-dev": {
-    "illuminate/support": "^7.0 | ^8.0",
+    "illuminate/support": "^7.0 | ^8.0 | ^9.0",
     "phpunit/phpunit": "^9.5.14"
   },
   "scripts": {
