--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '7.4', '8', '8.1' ]
-        laravel: [ '7', '8', '9' ]
+        php: [ '8', '8.1' ]
+        laravel: [ '8', '9' ]
 
     steps:
       - name: Checkout Code
