--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "illuminate/support": "^8.0 | ^9.0",
+    "illuminate/support": "^8|^9|^10",
     "phpunit/phpunit": "^9.5.14"
   },
   "scripts": {
