--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
 
     strategy:
       matrix:
-        php: [ '8', '8.1' ]
-        laravel: [ '8', '9' ]
+        php: [ '8', '8.1', '8.2' ]
+        laravel: [ '8', '9', '10' ]
 
     steps:
       - name: Checkout Code
@@ -51,6 +51,14 @@ jobs:
           max_attempts: 5
           command: composer require "laravel/framework:9.*" --no-update --no-interaction
         if: "matrix.laravel == '9'"
+
+      - name: Select Laravel 10
+        uses: nick-invision/retry@v1
+        with:
+          timeout_minutes: 5
+          max_attempts: 5
+          command: composer require "laravel/framework:10.*" --no-update --no-interaction
+        if: "matrix.laravel == '10'"
 
       - name: Install PHP Dependencies
         uses: nick-invision/retry@v1
